admin\orders.php
admin\packingslip.php
-- Custom ID display correction

----------------------------------------------

includes\functions\extra_functions\products_with_attributes.php
-- Added new feature to change image displayed when the selection is changed "in a Select List (drop-down)".

includes\modules\pages\shopping_cart\header_php.php
-- Updated when 'customid' is shown.

includes\modules\YOUR_TEMPLATE\attributes.php
-- Added option to display images when a selection is changed in select list. 
-- Change to correct customid display behaviour with various option switches.
-- Added a new option switch 'SBA_SHOW_IMAGE_ON_PRODUCT_INFO'.
-- Moved Out of Stock label to after attribute name.

includes\templates\YOUR_TEMPLATE\jscript\jquery.form.js
includes\templates\YOUR_TEMPLATE\jscript\jquery-1.10.2.min.js
-- Moved file from admin\ajax folder.

includes\templates\YOUR_TEMPLATE\templates\tpl_account_history_info_default.php
includes\templates\YOUR_TEMPLATE\templates\tpl_checkout_confirmation_default.php
-- Custom ID display correction

------------------------------------------

Added CSS support to format the SBA Selection list.

Add the following to your  stylesheet.css.
Make changes as needed for your site.

/* SBA Selection List format */
.sbaselectlist{
	display: inline;
	font-size: 1em;
	margin: 0.1em;
}

Note: This new feature relies on the use of an 'id="SBA_ProductImage"' tag added to the image box in tpl_modules_main_product_image.php

Example (default template):
document.write('<?php echo '<a href="javascript:popupWindow(\\\'' . zen_href_link(FILENAME_POPUP_IMAGE, 'pID=' . $_GET['products_id']) . '\\\')">' . zen_image(addslashes($products_image_medium), addslashes($products_name), MEDIUM_IMAGE_WIDTH, MEDIUM_IMAGE_HEIGHT,'id="SBA_ProductImage"') . '<br /><span class="imgLink">' . TEXT_CLICK_TO_ENLARGE . '</span></a>'; ?>');

Example (using zen_lightbox mod)